fix click error on mobile

--- a/style.css
+++ b/style.css
@@ -345,6 +345,9 @@ p a{
     width:70%;
 }
 
+.projectListMobile{
+    display:none;
+}
 
 /* about page */
 .left-aligned{
@@ -709,6 +712,7 @@ img{
         font-size:0.9rem;
     }
     /*     index     */
+    
     .cursor{
         all:unset;
     }
@@ -732,7 +736,12 @@ img{
         width:90%;
         background-color: #f9f9f9;
     }
+    
     .projectList{
+        display:none;
+    }
+    .projectListMobile{
+        display:block;
         padding: 5%;
         margin-top: 0px;
     }
